// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> create Popover 1`] = `
<div
  className="fd-popover"
>
  <span
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
      />
    </div>
  </span>
</div>
`;

exports[`<Popover /> create Popover 2`] = `
<div
  className="fd-popover blue"
>
  <span
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
      />
    </div>
  </span>
</div>
`;

exports[`<Popover /> create Popover 3`] = `
<div
  className="fd-popover"
>
  <span
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
      />
    </div>
  </span>
</div>
`;

exports[`<Popover /> create Popover 4`] = `
<div
  className="fd-popover"
>
  <span
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
      />
    </div>
  </span>
</div>
`;
